--- a/src/pages/About/styles.scss
+++ b/src/pages/About/styles.scss
@@ -1,5 +1,5 @@
 .about_content {
-	margin: 0px 0px 80px 0px;
+	margin: 30px 0px 30px 0px;
   p {
     font-size: 1.5rem;
     margin: 0px 0px 20px 0px;
