--- a/src/pages/Portfolio/styles.scss
+++ b/src/pages/Portfolio/styles.scss
@@ -3,7 +3,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: center;
-	margin: 0px 0px 70px 0px;
+	margin: 30px 0px 10px 0px;
 	h2{
 		font-size: 3rem;
 		margin: 0px 0px 20px 0px;
