--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -23,7 +23,7 @@ body {
   background-repeat: no-repeat;
   background-size: cover;
   background-position: center;
-	overflow-x: hidden;
+  overflow-x: hidden;
 }
 
 #root {
@@ -44,7 +44,8 @@ body {
 .main {
   flex-grow: 1;
   position: relative;
-  margin: 90px 0;
+  margin: 76px 0;
+  overflow-x: hidden;
 }
 @media (max-width: 1330px) {
   .container {
